fix(index): fixed overflow for main container
Scroll bar begone!

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,8 +45,9 @@ HTML {
   height        : auto;
   width         : auto;
   overflow      : auto;
-  text-align    : middle;
+  text-align    : center;
   vertical-align: middle;
+  overflow      : hidden;
 }
 
 .pivot {
